forgefluid fuel consumption